fix section distortion

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -303,7 +303,7 @@ img {
 }
 
 .distortion-text {
-  margin-top: 30px;
+  margin-top: 27px;
   margin-bottom: 30px;
 }
 
